--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,9 +30,9 @@ const { title } = Astro.props;
   font-family: "Space Mono", monospace;
 }
 body {
-  min-width: 100vw;
-  min-height: 100vh;
-  background: var(--bgc) radial-gradient(ellipse farthest-side at bottom, var(--wood-trans) , transparent);
+  width: 100vw;
+  height: 100vh;
+  background: var(--bgc); 
   display: flex;
   align-items: center;
   justify-content: center;
