--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -28,7 +28,7 @@ import LinkButton from "./LinkButton.astro"
   </ul>
 </aside>
 <div id="black">
-    <span>Made with 🗿🤙</span>
+    <span id="joke">Made with 🗿🤙</span>
 </div>
 
 <script lang="ts">
@@ -55,7 +55,7 @@ $black?.addEventListener('click', () => {
         changes();
     }
 }); 
-let $els = document.querySelectorAll('button');
+let $els = document.querySelectorAll('button[data-path]');
 $els?.forEach(element => {
     if (element.dataset.path == undefined) {
         return null;
@@ -66,6 +66,15 @@ $els?.forEach(element => {
     document.body.appendChild($a);
     $a.click();
 })
+
+});
+document.querySelector('#joke').addEventListener('click', () => {
+    const $a = document.createElement('a');
+    $a.href = 'https://github.com/kinire98/kinire98.github.io';
+    $a.target = '_blank';
+    $a.style.display = 'none';
+    document.body.appendChild($a);
+    $a.click();
 
 });
 </script>
@@ -146,6 +155,10 @@ aside ul li {
   color: var(--white);
   text-align: center;
   position: relative;
+  cursor: pointer;
+}
+#black span:hover {
+  text-decoration: underline;
 }
 @media screen and (max-width: 1100px) {
   aside {
