--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -135,12 +135,14 @@ span:hover {
   ul {
     flex-direction: column;
     min-height: 80vh;
+    position: relative;
+    bottom: 50px;
   }
   ul li {
     width: 30%;
   }
   span {
-    bottom: 2.5vh;
+    bottom: 1.5vh;
   }
 }
 @media screen and (max-width: 490px) {
