--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,9 @@ document.querySelector('span').addEventListener('click', () => {
 </script>
 
 <style>
-
+body {
+  overflow-y: hidden;
+}
 main {
   flex-direction: column;
 }
@@ -136,7 +138,7 @@ span:hover {
     flex-direction: column;
     min-height: 80vh;
     position: relative;
-    bottom: 50px;
+    bottom: 75px;
   }
   ul li {
     width: 30%;
