--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -94,9 +94,9 @@ document.querySelector('#joke').addEventListener('click', () => {
 .hamburger.is-active .hamburger-inner::before,
 .hamburger-inner, .hamburger-inner::after,
 .hamburger-inner::before {
-    background-color:var(--wood);
-    box-shadow: 0 0 2px var(--wood),
-                0 0 4px var(--wood);
+    background-color:var(--cont);
+    box-shadow: 0 0 2px var(--cont),
+                0 0 4px var(--cont);
 }
 aside {
   display: flex;
