--- a/src/components/LinkButtonAnim.astro
+++ b/src/components/LinkButtonAnim.astro
@@ -36,7 +36,7 @@ button:hover {
 }
 button div {
   width: 100%;
-  border-bottom: 1px solid var(--wood);
+  border-bottom: 1px solid var(--cont);
   position: absolute;
   bottom: 0;
   transition: all .5s;
