--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,8 +5,8 @@
   --sbgc: #393e4666;
   --cont:  #00adb5;
   --cont-trans: #00adb522;
-  --wood: #00adb5;
-  --wood-trans: #00abd522;
+  --wood: #BFA572;
+  --wood-trans: #BFA57233;
   --black-transp: #000000dd;
   --bgc-trans: #22283122;
 }
