--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,7 @@ const { title } = Astro.props;
   padding: 0;
   box-sizing: border-box;
   font-family: "Space Mono", monospace;
+  text-decoration-color: var(--cont);
 }
 body {
   width: 100vw;
