--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,18 +6,34 @@ import LinkButton from "../components/LinkButton.astro"
 <MenuLayout title="404 - kinire">
     <h1>This isn't the page you are looking for</h1>
     <br><br><br><br><br>
-    <LinkButton content="Go back to home page" path="../" id="home"/>
+    <LinkButton content="Go back to home page" path="../" id="home404"/>
 </MenuLayout>
 <script lang="ts">
 
-let $homes = document.querySelectorAll('button#home');
-$homes.forEach(element => {
-    element.addEventListener('click', () => {
+let $home = document.querySelector('button#home404');
+    $home.addEventListener('click', () => {
         const $a = document.createElement('a');
-        $a.href = element.dataset.path;
+        $a.href = $home.dataset.path;
         $a.style.display = 'none';
         document.body.appendChild($a);
         $a.click();
     });
-});
 </script>
+<style is:global>
+    main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+    }
+    h1 {
+        width: 75%; 
+        margin-block: 50px;
+        text-align: center;
+    }
+    #home404 {
+        width: 50%;
+        margin-block: 50px;
+    }
+</style>
