--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LinkButtonAnim from '../components/LinkButtonAnim.astro';
+import Title from '../components/Title.astro';
 ---
 
 <Layout title="Home - kinire">
 	<main>
+      <Title words='Hello and welcome, to my portfolio website, enjoy :)'></Title>
       <ul>
         <li>
 			    <LinkButtonAnim id='about_me' content='About&nbsp;me' path='./about_me'/>
@@ -24,8 +26,18 @@ import LinkButtonAnim from '../components/LinkButtonAnim.astro';
 </Layout>
 
 <script lang="ts">
-import openLinks from "../helpers/openLink";
-openLinks();
+
+let $els = document.querySelectorAll('button[data-path]');
+$els?.forEach(element => {
+    element.addEventListener('click', () => {
+    const $a = document.createElement('a');
+    $a.href = element.dataset.path;
+    $a.style.display = 'none';
+    document.body.appendChild($a);
+    $a.click();
+})
+
+});
 document.querySelector('span').addEventListener('click', () => {
     const $a = document.createElement('a');
     $a.href = 'https://github.com/kinire98/kinire98.github.io';
@@ -37,7 +49,7 @@ document.querySelector('span').addEventListener('click', () => {
 });
 </script>
 
-<style>
+<style is:global>
 body {
   overflow-y: hidden;
 }
@@ -129,6 +141,9 @@ span:hover {
   } 
 }
 @media screen and (max-width: 750px) {
+  h1 {
+    display: none; 
+  }
   ul {
     flex-direction: column;
     min-height: 80vh;
