Component Title improved

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Title from '../components/Title.astro';
 
 <Layout title="Home - kinire">
 	<main>
-      <Title words='Hello and welcome, to my portfolio website, enjoy :)'></Title>
+      <!--<Title words='Hello and welcome to my website, enjoy :)'></Title>-->
       <ul>
         <li>
 			    <LinkButtonAnim id='about_me' content='About&nbsp;me' path='./about_me'/>
