--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -16,7 +16,7 @@ $words.forEach(word => {
 <script lang="ts" type="module">
     const $divs = document.querySelectorAll('h1 div');
     let position = 0;
-    const INTERVALLENGHT = 7500;
+    const INTERVALLENGHT = 10000;
     const showProgressive = (el) => {
         if(!el instanceof HTMLElement){
             return null;
@@ -58,17 +58,29 @@ $words.forEach(word => {
         font-variant: small-caps;
         color: var(--bgc);
         font-size: 50px;
+        opacity: 0;
+        animation: appear 2s ease-out forwards;
     }
     h1 div {
         animation: animate 7.5s linear infinite;
         display: none;
     }
-    @keyframes animate {
-        0%,10%,20%,50.1%,60%,65.1%,80%,90.1%,92% {
-            color: transparent; 
-            text-shadow: none;
+    @keyframes appear {
+        0% {
+            opacity: 0;
+            transform: translateY(-50px);
         }
-        18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100% {
+        100% {
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+    @keyframes animate {
+        18.1%,10%,20%,50.1%,60%,65.1%,80%,90.1%,92% {
+            color: var(--bgc); 
+            text-shadow: 0 0 4px var(--black);
+        }
+        0%, 18%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100% {
             color:var(--white);
             text-shadow: 0 0 10px var(--cont),
                         0 0 20px var(--cont),
