Changed the font title, and fixed some of the browser titles

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -59,10 +59,12 @@ $words.forEach(word => {
         color: var(--bgc);
         font-size: 50px;
         opacity: 0;
+        font-weight: bold;
+        font-family: "neon", monospace !important;
         animation: appear 2s ease-out forwards;
     }
     h1 div {
-        animation: animate 7.5s linear infinite;
+        animation: animate 6s linear forwards;
         display: none;
     }
     @keyframes appear {
