--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -3,6 +3,6 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 ---
 
 
-<MenuLayout title="Blog - kinire">
+<MenuLayout title="About me - kinire">
     
 </MenuLayout>
