--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,6 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 ---
 
 
-<MenuLayout title="Contact - kinire">
+<MenuLayout title="Projects - kinire">
     
 </MenuLayout>
