--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
+    <link rel="preload" href="../../public/fonts/NEON_CLUB_MUSIC.otf" as="font" type="font/otf" crossorigin>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
@@ -24,12 +25,31 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 @import '../styles/colors.css';
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+@font-face {
+  font-family: "neon";
+  src: url('../../public/fonts/NEON_CLUB_MUSIC.otf') format("opentype");
+}
+@font-face {
+  font-family: "neon";
+  font-weight: light;
+  src: url('../../public/fonts/NEON_CLUB_MUSIC_light.otf') format("opentype");
+}
+@font-face {
+  font-family: "neon";
+  font-weight: bold;
+  src: url('../../public/fonts/NEON_CLUB_MUSIC_bold.otf') format("opentype");
+}
+@font-face {
+  font-family: "neon";
+  font-style: italic;
+  src: url('../../public/fonts/NEON_CLUB_MUSIC_italic.otf') format("opentype");
+}
 * {
   margin: 0;  
   padding: 0;
   box-sizing: border-box;
-  font-family: "Space Mono", monospace;
+  font-family: "neon", monospace;
   text-decoration-color: var(--cont);
   color: var(--white);
 }
