--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,6 +3,6 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 ---
 
 
-<MenuLayout title="Blog - kinire">
+<MenuLayout title="Contact - kinire">
     
 </MenuLayout>
