--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -170,6 +170,10 @@ aside ul li {
   }
 }
 @media screen and (max-width: 680px) {
+  aside ul {
+    position: relative;
+    bottom: 50px;
+  }
   aside ul li {
     width: 75%;
   }  
