--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -105,6 +105,8 @@ aside {
   flex-direction: column;
   height: 100vh;
   width: 30vw;
+  height: 100dvh;
+  width: 30dvw;
   position: fixed;
   top: 0;
   left: -50vw;
@@ -164,36 +166,45 @@ aside ul li {
   aside {
     width: 50vw;
     left: -60vw;
+    width: 50dvw;
+    left: -60dvw;
   }
   #black span {
     left: 10vw;
+    left: 10dvw;
   }
 }
 @media screen and (max-width: 680px) {
-  aside ul {
+  /*aside ul {
     position: relative;
     bottom: 30px;
-  }
+  }*/
   aside ul li {
     width: 75%;
   }  
   #black span {
     left: 20vw;
+    left: 20dvw;
   }
 }
 @media screen and (max-width: 450px) {
   aside {
     width: 60vw;
     left: -70vw;
+    width: 60dvw;
+    left: -70dvw;
   } 
   #black span {
     left: 30vw;
+    left: 30dvw;
   }
 }
 @media screen and (max-width: 365px) {
   aside {
     width: 70vw;
     left: -80vw;
+    width: 70dvw;
+    left: -80dvw;
   }  
 }
 @media screen and (max-height: 700px) {
