--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,6 +56,8 @@ const { title } = Astro.props;
 body {
   min-width: 100vw;
   min-height: 100vh;
+  min-width: 100dvw;
+  min-height: 100dvh;
   background: var(--bgc); 
   display: flex;
   align-items: center;
