--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,10 +54,8 @@ const { title } = Astro.props;
   color: var(--white);
 }
 body {
-  min-width: 100vw;
-  min-height: 100vh;
-  min-width: 100dvw;
-  min-height: 100dvh;
+  min-width: 100%;
+  min-height: 100%;
   background: var(--bgc); 
   display: flex;
   align-items: center;
@@ -65,16 +63,18 @@ body {
 }
 .back {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: radial-gradient(ellipse farthest-side at bottom, var(--cont-trans), transparent);
   z-index: -1;
   top: 0;
 }
 #back {
   left: 50vw;
+  left: 50dvw;
 }
 #back2 {
   right: 50vw;
+  right: 50dvw;
 }
 </style>
