--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -103,10 +103,8 @@ aside {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
-  width: 30vw;
-  height: 100dvh;
-  width: 30dvw;
+  height: 100%;
+  width: 30%;
   position: fixed;
   top: 0;
   left: -50vw;
