--- a/src/layouts/MenuLayout.astro
+++ b/src/layouts/MenuLayout.astro
@@ -13,3 +13,9 @@ const { title } = Astro.props;
         <slot />
     </main>
 </Layout>
+<style>
+    main {
+        min-width: 100dvw;
+        min-height: 100dvh;
+    }
+</style>
