--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-    <link rel="preload" href="../../public/fonts/NEON_CLUB_MUSIC.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/fonts/NEON_CLUB_MUSIC.otf" as="font" type="font/otf" crossorigin>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
@@ -28,22 +28,22 @@ const { title } = Astro.props;
 
 @font-face {
   font-family: "neon";
-  src: url('../../public/fonts/NEON_CLUB_MUSIC.otf') format("opentype");
+  src: url('/fonts/NEON_CLUB_MUSIC.otf') format("opentype");
 }
 @font-face {
   font-family: "neon";
   font-weight: light;
-  src: url('../../public/fonts/NEON_CLUB_MUSIC_light.otf') format("opentype");
+  src: url('/fonts/NEON_CLUB_MUSIC_light.otf') format("opentype");
 }
 @font-face {
   font-family: "neon";
   font-weight: bold;
-  src: url('../../public/fonts/NEON_CLUB_MUSIC_bold.otf') format("opentype");
+  src: url('/fonts/NEON_CLUB_MUSIC_bold.otf') format("opentype");
 }
 @font-face {
   font-family: "neon";
   font-style: italic;
-  src: url('../../public/fonts/NEON_CLUB_MUSIC_italic.otf') format("opentype");
+  src: url('/fonts/NEON_CLUB_MUSIC_italic.otf') format("opentype");
 }
 * {
   margin: 0;  
