--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,8 +1,83 @@
 ---
 import MenuLayout from "../layouts/MenuLayout.astro";
+import ProjectCard from "../components/ProjectCard.astro";
+//const res = await fetch("https://api.github.com/users/kinire98/repos");
+
+//const json = await res.json();
+
+import jsonTest from "../helpers/jsontest.js";
+const json = JSON.parse(jsonTest());
+
 ---
 
 
 <MenuLayout title="Projects - kinire">
-    
+    <div>
+        {
+            json.map((ob: any) => (
+
+                <ProjectCard name={ob.name} desc={ob.description} url={ob.html_url} language={ob.language} has_pages={ob.has_pages}/>
+            ))
+        }
+        <img src="/github.svg" id="imagen-github"/>
+    </div>
 </MenuLayout>
+
+<script>
+    import openLink from "../helpers/openLink";
+    const $projects = document.querySelectorAll('.project');
+
+    const INTERVALLENGTH: number = 15000;
+
+    let position: number = 0;
+
+    function show($el: HTMLElement)  {
+        $el.style.visibility = 'visible';
+        $el.style.opacity = '1';
+    }
+    function hide($el: HTMLElement) {
+        $el.style.visibility = 'hidden';
+        $el.style.opacity = '0';
+    }
+
+    $projects.forEach((el) => {
+        const positionInside = position;
+        const $el = el as HTMLElement;
+        hide($el);
+        setTimeout(() => {show($el)}, INTERVALLENGTH * positionInside);
+        setTimeout(() => {hide($el)},INTERVALLENGTH + (INTERVALLENGTH * positionInside));
+        setInterval(() => {
+            setTimeout(() => {show($el)}, INTERVALLENGTH * positionInside);
+            setTimeout(() => {hide($el)},INTERVALLENGTH + (INTERVALLENGTH * positionInside));
+        }, INTERVALLENGTH * $projects.length);
+        position++;
+        const $githubRepo = el.querySelector('[data-href]') as HTMLElement;
+        openLink($githubRepo, $githubRepo.dataset.href!);
+
+        const $hasghPages = el.querySelector('[data-path]');
+        if($hasghPages !== null) {
+            const $ghpages = $hasghPages as HTMLElement;
+            openLink($ghpages, $ghpages.dataset.path!);
+        }
+
+    });
+
+    openLink(document.getElementById('imagen-github') as HTMLElement, 'https://github.com/kinire98');
+</script>
+<style>
+    div {
+        height: 100dvh;
+        width: 100dvw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    img {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 15px;
+        right: 15px;
+        fill: var(--cont);
+    }
+</style>
