Improved the projects page

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -33,10 +33,10 @@ language = getRoutesForImage(language);
     <div class="not-name">
         <p>{desc}</p>
         <div class="buttons">
+            <button data-href={url}><img src="/curri_icons/others/github.svg"/></button>
             { 
                 language.length == 0 ? "" : <img src={language} />
             }
-            <button data-href={url}><img src="/curri_icons/others/github.svg"/></button>
         </div>
         {
             has_pages? name === "kinire98.github.io" ? "" : <LinkButtonProjects id={name + "id"} content="Link to the website" path={pages_url}/> : ""
@@ -46,10 +46,10 @@ language = getRoutesForImage(language);
 
 <style is:global>
     div.project {
-        min-width: 50vw;
-        min-width: 50dvw;
-        max-width: 70vw;
-        max-width: 70dvw;
+        min-width: 60vw;
+        min-width: 60dvw;
+        max-width: 65vw;
+        max-width: 65dvw;
         transition: all .3s;
         position: absolute;
         display: flex;
@@ -64,13 +64,15 @@ language = getRoutesForImage(language);
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        width: 100%;
         margin-top: 50px;
     }
     div.buttons {
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        text-align: center;
         margin-block: 50px;
     }
     p {
@@ -88,5 +90,10 @@ language = getRoutesForImage(language);
     [data-path] {
 
     }
-    [data-url] {}
+    [data-href]{
+        transition: all .3s;
+    }
+    [data-href]:hover {
+        filter: drop-shadow(0 0 15px var(--bgc));
+    }
 </style>
