--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -88,6 +88,10 @@ const json = JSON.parse(jsonTest());
         height: 50px;
         top: 30px;
         right: 30px;
-        fill: var(--cont);
+        transition: all .3s;
+    }
+    img:hover {
+
+        filter: drop-shadow(0 0 5px var(--cont));
     }
 </style>
