Started blog posts page

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -45,6 +45,7 @@ language = getRoutesForImage(language);
 </div>
 
 <style is:global>
+    @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
     div.project {
         min-width: 60vw;
         min-width: 60dvw;
@@ -77,7 +78,6 @@ language = getRoutesForImage(language);
     }
     p {
         font-size: 1.5em;
-        font-weight: bold;
         text-align: center;
     }
     button {
