--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,12 +1,9 @@
 ---
 import MenuLayout from "../layouts/MenuLayout.astro";
 import ProjectCard from "../components/ProjectCard.astro";
-//const res = await fetch("https://api.github.com/users/kinire98/repos");
+const res = await fetch("https://api.github.com/users/kinire98/repos");
 
-//const json = await res.json();
-
-import jsonTest from "../helpers/jsontest.js";
-const json = JSON.parse(jsonTest());
+const json = await res.json();
 
 ---
 
