Removed test article

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,8 +10,9 @@ const posts = await Astro.glob('./blog/*.md');
 
 <MenuLayout title="Blog - kinire">
     {
+        posts.length == 0 ? <h1>There isn't any articles yet</h1> : 
         posts.map(post => (
-            <BlogEntry title={ post.frontmatter.title } author={ post.frontmatter.author } date={ post.frontmatter.date } img_url={ post.frontmatter.img_url } blog_post_url={ post.file }/>
+            <BlogEntry title={ post.frontmatter.title } author={ post.frontmatter.author } date={ post.frontmatter.date } img_url={ post.frontmatter.img_url } blog_post_url={ post.url! }/>
         ))
     }
 </MenuLayout>
