--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LinkButtonAnim from '../components/LinkButtonAnim.astro';
-import Title from '../components/Title.astro';
+import HomeTitle from '../components/HomeTitle.astro';
 ---
 
 <Layout title="Home - kinire">
 	<main>
-      <Title words='Hello and welcome to my website, enjoy :)'></Title>
+      <HomeTitle words='Hello and welcome to my website, enjoy :)'></HomeTitle>
       <ul>
         <li>
 			    <LinkButtonAnim id='about_me' content='About&nbsp;me' path='./about_me'/>
