--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,87 +1,24 @@
 ---
 interface Props {
-    words: string
+    content: string
 }
-const { words } = Astro.props;
-let $words = words.split(',');
-let content = '';
-$words.forEach(word => {
-    content += `<div>${word}</div>`;
-})
+const { content } = Astro.props;
 ---
-<h1 set:html={content}>
-</h1>
+<div class="prog-title">
+    <h2 data-content={content} class="project-title"></h2>
+</div>
 
-
-<script lang="ts" type="module">
-    const $divs = document.querySelectorAll('h1 div');
-    let position = 0;
-    const INTERVALLENGHT = 10000;
-    const showProgressive = (el) => {
-        if(!el instanceof HTMLElement){
-            return null;
-        }
-        let content = el.innerHTML;
-        el.innerHTML = '';
-        let counter = 0;
-        const interval = setInterval(() => {
-            el.innerHTML += content[counter];
-            counter++;
-        }, (INTERVALLENGHT / 4) / content.length);
-        setTimeout(() => {
-            clearInterval(interval);
-            if(el.innerHTML !== content) {
-                el.innerHTML += content[content.length - 1];
-            }
-        }, INTERVALLENGHT / 4);
-        el.style.display = 'block'; 
+<style>
+    div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 5em;
     }
-    const hide = (el) => {
-        el.style.display = 'none';
-    }
-    $divs.forEach(element => {
-        let positionInside = position;
-        setTimeout(() => {showProgressive(element)}, INTERVALLENGHT * positionInside);
-        setTimeout(() => {hide(element)}, INTERVALLENGHT + (INTERVALLENGHT * positionInside));
-        setInterval(() => {
-            setTimeout(() => {showProgressive(element)}, INTERVALLENGHT * positionInside);
-            setTimeout(() => {hide(element)}, INTERVALLENGHT + (INTERVALLENGHT * positionInside));
-        }, INTERVALLENGHT * $divs.length)
-        position++;
-    })
-</script>
-
-<style is:global>
-    h1 {
-        position: absolute;
-        top: 150px;
-        font-variant: small-caps;
-        color: var(--bgc);
-        font-size: 50px;
-        opacity: 0;
-        font-weight: bold;
+    h2 {
+        font-size: 3em;
+        animation: animate 8s linear forwards; 
         text-align: center;
-        font-family: "neon", monospace !important;
-        animation: appear 2s ease-out forwards;
-    }
-    h1 div {
-        animation: animate 6s linear forwards;
-        display: none;
-    }
-    @media screen and (max-height: 600px) {
-        h1 {
-            top: 30px;
-        }
-    }
-    @keyframes appear {
-        0% {
-            opacity: 0;
-            transform: translateY(-50px);
-        }
-        100% {
-            opacity: 1;
-            transform: translateY(0px);
-        }
     }
     @keyframes animate {
         18.1%,10%,20%,50.1%,60%,65.1%,80%,90.1%,92% {
