--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,6 +60,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 .back {
   position: fixed;
