--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,9 +1,12 @@
 ---
 import MenuLayout from "../layouts/MenuLayout.astro";
 import ProjectCard from "../components/ProjectCard.astro";
+//import jsonTest from "../helpers/jsontest";
 const res = await fetch("https://api.github.com/users/kinire98/repos");
 
 const json = await res.json();
+
+//const json = JSON.parse(jsonTest());
 
 ---
 
@@ -22,6 +25,7 @@ const json = await res.json();
 
 <script>
     import openLink from "../helpers/openLink";
+    import showLetters from "../helpers/showLetters"
     const $projects = document.querySelectorAll('.project');
 
     const INTERVALLENGTH: number = 15000;
@@ -32,13 +36,7 @@ const json = await res.json();
         $el.style.visibility = 'visible';
         $el.style.opacity = '1';
         const $title: HTMLElement = $el.querySelector('h2')!;
-        $title.style.display = 'inline';
-        let i = 0;
-        const addLetters = setInterval(() => {
-            if(i === $title.dataset.content!.length - 1) clearInterval(addLetters);
-            $title.innerHTML += $title.dataset.content![i];
-            i++;
-        }, (INTERVALLENGTH / 6) / $title.dataset.content!.length)
+        showLetters($title, INTERVALLENGTH);
     }
     function hide($el: HTMLElement) {
         $el.style.visibility = 'hidden';
