--- a/src/components/ReducedBlogEntry.astro
+++ b/src/components/ReducedBlogEntry.astro
@@ -3,18 +3,17 @@ interface Props {
     title: string,
     author: string,
     date: Date,
-    img_url: string,
-    blog_post_url: string
+    url: string
 }
 
-const { title, author, date, img_url, blog_post_url } = Astro.props;
+const { title, author, date, url } = Astro.props;
 let parsedDate = date === undefined 
 ? ""
 : date.toString().substring(0,9);
 ---
 
 
-<figure data-url={ blog_post_url }>
+<figure data-url={ url }>
     <figcaption>
         <h2>{ title }</h2>
         <span>{ author }</span>
