--- a/src/components/HomeTitle.astro
+++ b/src/components/HomeTitle.astro
@@ -37,17 +37,19 @@ $words.forEach(word => {
     const hide = (el: HTMLElement) => {
         el.style.display = 'none';
     }
-    $divs.forEach((el) => {
-        let positionInside = position;
-        let element = el as HTMLElement;
-        setTimeout(() => {showProgressive(element)}, INTERVALLENGHT * positionInside);
-        setTimeout(() => {hide(element)}, INTERVALLENGHT + (INTERVALLENGHT * positionInside));
-        setInterval(() => {
+    setTimeout(() => {
+        $divs.forEach((el) => {
+            let positionInside = position;
+            let element = el as HTMLElement;
             setTimeout(() => {showProgressive(element)}, INTERVALLENGHT * positionInside);
             setTimeout(() => {hide(element)}, INTERVALLENGHT + (INTERVALLENGHT * positionInside));
-        }, INTERVALLENGHT * $divs.length)
-        position++;
-    })
+            setInterval(() => {
+                setTimeout(() => {showProgressive(element)}, INTERVALLENGHT * positionInside);
+                setTimeout(() => {hide(element)}, INTERVALLENGHT + (INTERVALLENGHT * positionInside));
+            }, INTERVALLENGHT * $divs.length)
+            position++;
+        })
+    }, 4000);
 </script>
 
 <style is:global>
