--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,8 +54,10 @@ const { title } = Astro.props;
   color: var(--white);
 }
 body {
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 100vw;
+  min-width: 100dvw;
+  min-height: 100vh;
+  min-height: 100dvh;
   background: var(--bgc); 
   display: flex;
   align-items: center;
