--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,17 +109,10 @@ span:hover {
   button:hover {
     width: 95%;
   } 
-}
-
-@keyframes beginning-animation {
- 0% {
-   opacity: 0;
-   transform: translateY(-20px);
- }  
- 100% {
-   opacity: 1;
-   transform: translateY(0px);
- }
+  li {
+    position: relative;
+    top: 25px;
+  }
 }
 @media screen and (max-width: 1300px) {
   ul {
