--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,6 +63,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 50px;
+  overflow-x: hidden;
 }
 .back {
   position: fixed;
