--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -34,4 +34,14 @@ const { content } = Astro.props;
                         0 0 160px var(--cont);
         }
     }
+    @media screen and (max-width: 650px) {
+        h2 {
+            font-size: 2em;
+        }
+    }
+    @media screen and (max-width: 450px) {
+        h2 {
+            font-size: 1.5em;
+        }
+    }
 </style>
