--- a/src/components/LinkButtonProjects.astro
+++ b/src/components/LinkButtonProjects.astro
@@ -45,5 +45,11 @@ button:hover div {
   width: 80%;
   transform: translateX(11%);
 }
+
+@media screen and (max-height: 600px) {
+  button {
+    bottom: 30px;
+  } 
+}
 </style>
 
