--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -31,51 +31,36 @@ import LinkButton from "./LinkButton.astro"
     <span id="joke">Made with 🗿🤙</span>
 </div>
 
-<script lang="ts">
-    
-const $ham = document.querySelector('.hamburger')
-const $aside = document.querySelector('aside');
-const $black = document.querySelector('#black');
-let hidden = true;
-function changes() {
-    $ham?.classList.toggle('is-active');
-    $aside?.classList.toggle('is-active');
-    $black?.classList.toggle('is-active');
-    if (hidden) {
-      document.body.style.overflowY = "hidden";
-      hidden = false;
-    } else {
-      document.body.style.overflowY = "scroll";
-      hidden = true;
-    }  
-}
-$ham?.addEventListener('click', changes); 
-$black?.addEventListener('click', (e) => {
-    if(!hidden) changes();
-    
-}); 
-let $els = document.querySelectorAll('button[data-path]');
-$els?.forEach(element => {
-    if (element.dataset.path == undefined) {
-        return null;
-    }
-    element.addEventListener('click', () => {
-    const $a = document.createElement('a');
-    $a.href = element.dataset.path;
-    document.body.appendChild($a);
-    $a.click();
-})
+<script>
+  import openPage from "../helpers/openPage";
+  import openLink from "../helpers/openLink";
+  const $ham = document.querySelector('.hamburger')
+  const $aside = document.querySelector('aside');
+  const $black = document.querySelector('#black');
+  let hidden = true;
+  function changes() {
+      $ham?.classList.toggle('is-active');
+      $aside?.classList.toggle('is-active');
+      $black?.classList.toggle('is-active');
+      if (hidden) {
+        document.body.style.overflowY = "hidden";
+        hidden = false;
+      } else {
+        document.body.style.overflowY = "scroll";
+        hidden = true;
+      }  
+  }
+  $ham?.addEventListener('click', changes); 
+  $black?.addEventListener('click', (e) => {
+      if(!hidden) changes();
 
-});
-document.querySelector('#joke').addEventListener('click', () => {
-    const $a = document.createElement('a');
-    $a.href = 'https://github.com/kinire98/kinire98.github.io';
-    $a.target = '_blank';
-    $a.style.display = 'none';
-    document.body.appendChild($a);
-    $a.click();
-
-});
+  }); 
+  let $els = document.querySelectorAll('aside button[data-path]');
+  $els?.forEach(element => {
+    const $el = element as HTMLElement;
+    openPage($el, $el.dataset.path!);
+  });
+    openLink(document.getElementById('joke') as HTMLElement, "https://github.com/kinire98/kinire98.github.io")    
 </script>
 <style>
 @import '../styles/hamburgers.min.css';
