--- a/src/components/HomeTitle.astro
+++ b/src/components/HomeTitle.astro
@@ -63,6 +63,7 @@ $words.forEach(word => {
         font-weight: bold;
         text-align: center;
         font-family: "neon", monospace !important;
+        padding: 50px;
         animation: appear 2s ease-out forwards;
     }
     h1 div {
