--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -44,4 +44,11 @@ const { content } = Astro.props;
             font-size: 1.5em;
         }
     }
+    @media screen and (max-height: 600px) {
+        h2 {
+            font-size: 1.5em;
+            position: relative;
+            top: 45px;
+        }
+    }
 </style>
