--- a/src/layouts/MenuLayout.astro
+++ b/src/layouts/MenuLayout.astro
@@ -17,5 +17,8 @@ const { title } = Astro.props;
     main {
         min-width: 100dvw;
         min-height: 100dvh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 </style>
