--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,6 @@ import ProjectCard from "../components/ProjectCard.astro";
 const res = await fetch("https://api.github.com/users/kinire98/repos");
 
 const json = await res.json();
-
 //const json = JSON.parse(jsonTest());
 
 ---
@@ -95,5 +94,10 @@ const json = await res.json();
     }
     img:hover {
         filter: drop-shadow(0 0 5px var(--cont));
+    }
+</style>
+<style is:global>
+    body {
+        overflow: hidden;
     }
 </style>
