--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -112,6 +112,9 @@ language = getRoutesForImage(language);
         img {
             height: 30px;
         }
+        div.buttons {
+            margin-block: 30px;
+        }
     }
     @media screen and (max-height: 450px){
         p {
